# riverscapes-tools

./: .dockerignore  .gitignore  BRAT.code-workspace  CNAME  Channel.code-workspace  DEVELOPMENT_NOTES.md  Developer.md  Dockerfile  DownloadingData.html  GNAT.code-workspace  README.md  RSContext.code-workspace  RVD.code-workspace  Root.code-workspace  TauDEM.code-workspace  VBET.code-workspace  ViewingProjects.html  Workspace-BRAT.code-workspace  Workspace-RSContext.code-workspace  Workspace-VBET.code-workspace  index.html  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_cybercastor.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  postBuild.sh  postCreateCommand.sh  requirements.docker.txt
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml  docs_publish.yml  metadata-catalog.yml  publish.yml
Workspaces/: Anthro.code-workspace  BLMContext.code-workspace  BRAT-win.code-workspace  BRAT.code-workspace  CHaMPMetrics.code-workspace  CYBERCASTOR.code-workspace  Channel-win.code-workspace  Channel.code-workspace  ChannelArea.code-workspace  Confinement.code-workspace  CybercastorAPI.code-workspace  Docs.code-workspace  GNAT-win.code-workspace  GNAT.code-workspace  Grazing.code-workspace  HAND-win.code-workspace  HAND.code-workspace  Hydro.code-workspace  LTPBRExport.code-workspace  RCAT.code-workspace  RME.code-workspace  RSContext-win.code-workspace  RSContext.code-workspace  RSContext3dep.code-workspace  RSContextIT.code-workspace  RSContextNZ.code-workspace  RSDynamics.code-workspace  RVD.code-workspace  RiverscapesAPI.code-workspace  Root.code-workspace  Sticher.code-workspace  Stitcher.code-workspace  TauDEM-win.code-workspace  TauDEM.code-workspace  VBET-win.code-workspace  VBET.code-workspace  Vector-Prep.code-workspace  tool-template.code-workspace
anthro/: data.html  index.html
assets/js/: nav.js
brat/: Vision.html  acknowledgements.html  getting_started.html  index.html  references.html  support.html
brat/About/: acknowledgements.html  index.html  references.html
brat/Support/: DownloadingData.html  ModelLogic.html  WorkingWithOutputs.html  brat_table.html  help.html  index.html
brat/Technical_Reference/: architecture.html  calibration.html  database.html  help.html  inputs.html  installation.html  international.html  outputs.html  regional_regression.html  running_brat.html  suitability.html
brat/Validation/: combined_fis.html  index.html  reach_geometry.html  slope_validation.html  vegetation_fix.html
channel/: data.html  index.html  nhd.html
channel/Status/: ReportCard_1.1.1.html
developing/: Docker.html  Release_Checklist.html  index.html
docs/: .gitignore  CNAME  Docs.code-workspace  DownloadingData.md  Gemfile  README.md  ViewingProjects.md  _config.yml  docusaurus.config.ts  gatsby-config.ts  index.md  package.json  tsconfig.json
docs/content/: downloading-data.mdx  index.mdx
docs/developing/: Docker.md  index.md
docs/docs/: index.mdx
docs/scripts/: link_layers.sh
examples/: gis_tool.py  layer_definitions_demo.py  project_xml.py
gnat/: index.html
lib/commons/: README.md  pyproject.toml  setup.py
lib/commons/docs/: DotEnvFiles.md  README.md
lib/commons/rscommons/: __init__.py  augment_lyr_meta.py  augment_lyr_meta2.py  build_network.py  build_vrt.py  clean_nhd_data.py  clean_ntd_data.py  copy_features.py  copy_igos.py  database.py  debug.py  dotenv.py  download.py  download_dem.py  download_hand.py  filegdb.py  geographic_raster.py  geometry_ops.py  get_project_datasets.py  hand.py  layer_definitions.py  line_attributes_to_dgo.py  math.py  moving_window.py  national_map.py  national_map_api.py  ned_urls.csv  nhd_to_geopackage.py  plotting.py  prism.py  project_bounds.py  raster_buffer_stats.py  raster_warp.py  reach_attributes.py  reach_geometry.py  report_common.py  rspaths.py  science_base.py  segment_network.py  shapefile.py  (+5 more)
lib/commons/rscommons/classes/: gdal_errors.py  geotransform.py  logger.py  loop_timer.py  model_config.py  progress_bar.py  project_metrics.py  raster.py  rs_project.py  tempfiles.py  timer.py  vector_base.py  vector_classes.py  vector_datasource.py  xml_builder.py
lib/commons/rscommons/report/: get_colors.py  report_common.py  rs_report.py  test_rs_report.py
lib/commons/rscommons/report/templates/: report.css  template.html
lib/commons/rscommons/tests/: test_national_map_api.py
lib/commons/rscommons/thiessen/: geosmoothing.py  shapes.py  vor.py
lib/commons/scripts/: brat_priority_landscapes.py  brat_proj_metrics.py  download_files.py  gpkg_experiments.py  json_atts_to_gpkg.py  json_atts_to_gpkg_h10.py  rme_proj_metrics.py  scrape_summaries.py  shp_experiments.py  summarize_huc10_brat.py  summarize_huc10_rme.py  validation.py  warehouse_to_json.py  watersheds_to_sqlite.py
lib/commons/test/: test_dotenv.py  test_math.py  test_national_map_api.py  test_paths.py  test_timers.py  test_util.py  test_vector_base.py  test_vector_ops.py
lib/commons/test/data/: .gitignore  NHDFlowline.dbf  NHDFlowline.shp  NHDFlowline.shx  WBD-8-10-12.dbf  WBD-8-10-12.shx  WBDHU10.dbf  WBDHU10.shp  WBDHU10.shx  WBDHU12.dbf  WBDHU12.shp  WBDHU12.shx  WBDHU8.dbf  WBDHU8.shp  sample.gpkg  test_get_geometry_unary_union_1706030401.gpkg  test_get_geometry_unary_union_1706030402.gpkg  test_get_geometry_union_1706030401.gpkg  test_get_geometry_union_1706030402.gpkg
lib/cybercastor/: .gitignore  .graphqlrc  README.md  deletable_projects.txt  dump_sqlite.py  graphql.config.json  job.schema.json  (+3 more)
rcat/: data.html  index.html
rme/: Active Floodplain Area.html  Centerlines.html  Moving Window Analysis.html  Stream Gradient.html  Stream Size.html  Valley Gradient.html  index.html
rscontext/: basemaps.html  data.html  index.html
rvd/: index.html
scripts/: bootstrap-m1.sh  bootstrap-macm1.sh  bootstrap-win.ps1  bootstrap-win.sh  bootstrap.sh  dockerBuild.sh  dockerRun.sh  docs-bundler.sh  docs-publish.sh  installAll.sh  publish.sh  testscript.sh  uv-sync.sh
taudem/: data.html  index.html
vbet/: algorithm.html  index.html  references.html  vbet_metrics.md
(+527 files in other folders)
