[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
    "Cython>=3.0",
    "numpy>=1.26",
]
build-backend = "setuptools.build_meta"

[project]
name = "riverscapes-tools"
version = "0.1.0"
description = "Riverscapes open source toolchain packaged as a single distribution"
readme = "README.md"
requires-python = "~=3.12.0"
license = { file = "LICENSE" }
authors = [
    { name = "North Arrow Research", email = "info@northarrowresearch.com" },
]
keywords = ["riverscapes", "gis", "restoration"]
dependencies = [
    "affine>=2.4",
    "Cython>=3.0",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "networkx>=2.8",
    "numpy>=1.26",
    "postgis>=1.0.4",
    "psycopg2-binary>=2.9.9",
    "questionary>=2.0.1",
    "python-dateutil>=2.9.0.post0",
    "rasterio>=1.3.9",
    "requests>=2.32.5",
    "Rtree>=1.2.0",
    "scikit-fuzzy>=0.4.2",
    "scikit-image>=0.24,<0.25",
    "scipy>=1.12",
    "semver>=2.10.2,<3",
    "shapely>=2.0.4,<3",
    "sympy>=1.13.3",
    "termcolor>=2.4",
    "urllib3>=2.2",
    "rsxml>=2.1.1",
    "geopandas>=1.1.1",
]

[dependency-groups]
dev = [
    "autopep8>=2.3",
    "isort>=5.13",
    "psutil>=7.0.0",
    "pylint>=3.2",
]
catalog = [
    "riverscapes-metadata @ git+https://github.com/Riverscapes/RiverscapesXML.git@master#subdirectory=riverscapes_metadata",
]

[tool.pylint.main]
py-version = "3.12"
jobs = 1
persistent = false
ignored-modules = ["osgeo"]
init-hook = "import sys, types, importlib; from pathlib import Path; ROOT = Path(__file__).resolve().parent; sys.path.extend([str(ROOT / 'packages'), str(ROOT / 'lib' / 'commons')]);\nimportlib.invalidate_caches();\ntry:\n    importlib.import_module('osgeo')\nexcept ModuleNotFoundError:\n    osgeo = types.ModuleType('osgeo')\n    ogr = types.ModuleType('ogr')\n    osgeo.ogr = ogr\n    sys.modules['osgeo'] = osgeo\n    sys.modules['osgeo.ogr'] = ogr"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0301",
    "C0114",
    "C0103",
    "W0719",
    "W0718",
]

[tool.pylint.format]
max-line-length = 240

[tool.isort]
profile = "black"
line_length = 240
combine_as_imports = true
src_paths = ["packages", "lib"]
known_first_party = [
    "anthro",
    "blm_context",
    "brat",
    "channel",
    "confinement",
    "grazing",
    "hand",
    "hydro",
    "ltpbrexport",
    "rcat",
    "rme",
    "rscontext",
    "rscontext_3dep",
    "rscontext_it",
    "rscontext_nz",
    "rvd",
    "stitcher",
    "taudem",
    "vbet",
]

# setuptools: ext-modules is causing the error "Additional properties are not allowed ('ext-modules' was unexpected)"
# We haven't found a way to suppress this error, but the configuration works fine regardless.
[tool.setuptools.packages.find]
where = ["packages", "lib"]

[tool.setuptools]
ext-modules = [
    { name = "rcat.lib.accessibility.access", sources = ["packages/rcat/rcat/lib/accessibility/access.pyx"], language = "c" }
]
cmdclass = { build_ext = "packages.rcat.rcat.lib.accessibility._build_ext.BuildExt" }


[tool.setuptools.package-dir]
rcat = "packages/rcat/rcat"
"rcat.lib" = "packages/rcat/rcat/lib"
"rcat.lib.accessibility" = "packages/rcat/rcat/lib/accessibility"

[tool.setuptools.package-data]
"rcat.lib.accessibility" = ["*.pyx"]

# Ruff configuration, for those using it - no impact if not using Ruff
[tool.ruff]
line-length = 240
target-version = "py312"

[tool.ruff.lint]
# E (Pycodestyle Errors): Standard PEP 8 formatting errors (e.g., whitespace, line length).
# F (Pyflakes): Finds logical errors like unused imports, undefined variables, or f-strings without placeholders. Keep this.
# UP (Pyupgrade): Automatically upgrades syntax to match your Python version (e.g., changes List[str] to list[str] since you are on 3.12). Highly recommended.
# I (Isort): Sorts your imports automatically. Very helpful.
# (Bugbear): Detects likely bugs and design problems (e.g., mutable default arguments).
# N (PEP8 Naming): Enforces naming conventions (snake_case for functions, CapWords for classes). If your codebase is older, this might flag a lot of things.

select = ["E", "F", "I", "N", "UP", "B"]
ignore = [
    "B018",   # NotImplementedError raised directly
]

[tool.ruff.format]
quote-style = "preserve"