[project]
name = "rs-commons"
version = "0.0.0"  # Replace with the actual version from rscommons/__version__.py
description = "Riverscapes helpers for use across Python3 open-source GIS Stack"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matt Reimer", email = "info@northarrowresearch.com" }
]
requires-python = ">=3.5.2"
keywords = ["GIS", "Riverscapes", "Python3"]

dependencies = [
    "affine",
    "gdal>=3.0",
    "html5print",
    "jinja2",
    "matplotlib",
    "mccabe==0.6.1",
    "networkx==2.5",
    "numpy",
    "pyinquirer",
    "python-dateutil",
    "rasterio>=1.3.3",
    "scikit-fuzzy>=0.4.2",
    "scikit-image>=0.19.2",
    "scipy>=1.8.1",
    "semver==2.10.2",
    "shapely>=1.8.5.post1",
    "termcolor",
    "urllib3>=1.26.5",
]

