[project]
name = "rs-commons"
version = "0.0.0"  # Replace with the actual version from rscommons/__version__.py
description = "Riverscapes helpers for use across Python3 open-source GIS Stack"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Matt Reimer", email = "info@northarrowresearch.com" }
]
requires-python = ">=3.9"
keywords = ["GIS", "Riverscapes", "Python3"]
# Note: All dependencies are managed at the root of this monorepo
dependencies = []
